--- a/theme/cte/localization/en/Texts.json
+++ b/theme/cte/localization/en/Texts.json
@@ -168,5 +168,6 @@
 	"Découvrir la revue FOI": "Discover FOI magazine",
 	"Block.Paiement.Acces": "",
 	"ccn": "",
-	"Time.de": "from"
+	"Time.de": "from",
+	"couple_ephata": "Couple"
 }
