--- a/theme/cte/localization/fr/Texts.json
+++ b/theme/cte/localization/fr/Texts.json
@@ -168,5 +168,6 @@
 	"Découvrir la revue FOI": "Plus d'infos sur la revue",
 	"Block.Paiement.Acces": "Ci-dessous, vous pouvez procéder au paiement : ",
 	"ccn": "Communauté du Chemin Neuf",
-	"Time.de": "de"
+	"Time.de": "de",
+	"couple_ephata": "Couple"
 }
