--- a/theme/cte/localization/de/Texts.json
+++ b/theme/cte/localization/de/Texts.json
@@ -168,5 +168,6 @@
 	"Découvrir la revue FOI": "",
 	"Block.Paiement.Acces": "",
 	"ccn": "Gemeinschaft Chemin Neuf",
-	"Time.de": "von"
+	"Time.de": "von",
+	"couple_ephata": ""
 }
