--- a/theme/cte/localization/pl/Texts.json
+++ b/theme/cte/localization/pl/Texts.json
@@ -168,5 +168,6 @@
 	"Découvrir la revue FOI": "",
 	"Block.Paiement.Acces": "",
 	"ccn": "",
-	"Time.de": ""
+	"Time.de": "",
+	"couple_ephata": ""
 }
