--- a/localization/cs/Blocks/GeneralFields.json
+++ b/localization/cs/Blocks/GeneralFields.json
@@ -1,20 +1,20 @@
 {
-    "Block.Page": "Page",
-    "Block.Futurs": "Films en préparation",
-    "Block.Saison": "Saison",
-    "Block.VoirPlus" : "À voir aussi",
-    "Missions.cana":"Cana : au service du couple et de la famille",
-    "Missions.netforgod":"Net for God - Fraternité Oecuménique Internationale",
-    "Missions.ados":"Mission Jeunes 14-18 ans",
-    "Missions.jeunes":"Mission Jeunes 18-30 ans",
-    "Missions.foyers":"Foyers d'étudiants",
-    "Missions.jet":"JET - Volontariat International",
-    "Block.Mail.SendMail":"Poslat mail",
+    "Block.Page": "Strana",
+    "Block.Futurs": "Připravované filmy",
+    "Block.Saison": "Období",
+    "Block.VoirPlus" : "Více informací",
+    "Missions.cana":"Kána: ve službě páru a rodině",
+    "Missions.netforgod":"Net for God – mezinárodní ekumenická fraternita",
+    "Missions.ados":"Mladí 14–18",
+    "Missions.jeunes":"Mladí 18–30",
+    "Missions.foyers":"Studentské domovy",
+    "Missions.jet":"JET – mladí v zahraničí",
+    "Block.Mail.SendMail":"Poslat e-mail",
     "Block.Inscription.Telephone":"Telefon",
     "InfosPratiques":"Praktické informace",
     "Inscription":"Přihlásit se",
-    "FaireUnDon":"Darovart dar",
-    "Menu" : "menu",
-    "Accueil" : "Home",
-    "Time.At":"-"
+    "FaireUnDon":"Darovat",
+    "Menu": "Menu",
+    "Accueil": "Domů",
+    "Time.At":"–"
 }
