--- a/localization/cs/Blocks/GeneralFields.json
+++ b/localization/cs/Blocks/GeneralFields.json
@@ -13,7 +13,7 @@
     "Block.Inscription.Telephone":"Telefon",
     "InfosPratiques":"Praktické informace",
     "Inscription":"Přihlásit se",
-    "FaireUnDon":"Darovart dar",
+    "FaireUnDon":"Darovat dar",
     "Menu" : "menu",
     "Accueil" : "Home",
     "Time.At":"-"
