--- a/theme/cte/localization/cs/Texts.json
+++ b/theme/cte/localization/cs/Texts.json
@@ -51,7 +51,7 @@
 	"personne-avec-enfants": "Osoba s dítětem",
 	"fiances": "Snoubenci",
 	"adulte": "Jednotlivec",
-	"pretre": "",
+	"pretre": "Kněz",
 	"Block.Inscription.Attente.Ligne1": "Vybraný návrh je kompletní",
 	"Block.Inscription.Attente.Ligne2": "Můžete se zaregistrovat na čekací listinu.",
 	"Block.Inscription.Attente.Ligne3": "Registrační poplatek bude požadován při potvrzení vaší registrace.",
