debug inscriptions paiements

--- a/theme/cte/localization/es/Texts.json
+++ b/theme/cte/localization/es/Texts.json
@@ -123,7 +123,7 @@
 	"Block.Inscription.Motivation": "Para que la inscripción sea completa, gracias por enviar una carta de motivación à la dirección de la secretaría indicada más arriba.",
 	"Block.Inscription.Formulaire_": "Para que su inscripción sea completa, por favor imprimir y rellenar a mano el formulario complementario siguiente y enviarlo a la dirección de la secretaria indicada más arriba.",
 	"Block.Inscription.FormulaireEtMotiv": "Para que su inscripción sea completa, por favor escribir una carta de motivación, imprimir el formulario complementario siguiente, rellenarlo a mano et enviar esos dos documentos a la dirección de la secretaria indicada más arriba.",
-	"Block.Inscription.Succes": "Su inscripción ha sido registrada",
+	"Block.Inscription.Succes": "Su inscripción ha sido recibida. Gracias.",
 	"Block.Inscription.PaimentComplementaire": "",
 	"Block.Inscription.PaimentComplementaire.Intro": "",
 	"Block.Inscription.PaimentComplementaire.Email": "",
