update localization cte theme

--- a/theme/cte/localization/cs/Texts.json
+++ b/theme/cte/localization/cs/Texts.json
@@ -51,7 +51,7 @@
 	"personne-avec-enfants": "Osoba s dítětem",
 	"fiances": "Snoubenci",
 	"adulte": "Jednotlivec",
-	"pretre": "Kněz",
+	"pretre": "",
 	"Block.Inscription.Attente.Ligne1": "Vybraný návrh je kompletní",
 	"Block.Inscription.Attente.Ligne2": "Můžete se zaregistrovat na čekací listinu.",
 	"Block.Inscription.Attente.Ligne3": "Registrační poplatek bude požadován při potvrzení vaší registrace.",
@@ -59,9 +59,9 @@
 	"Block.Inscription.Fiche": "Přihláška",
 	"Block.Inscription.InfosPerso": "Osobní údaje",
 	"Block.Inscription.Societe": "Firma nebo organizace",
-	"Block.Inscription.Nom": "Jméno",
+	"Block.Inscription.Nom": "Příjmení",
 	"Block.Inscription.Nom.Different": "Jméno(jestli je rozdílné)",
-	"Block.Inscription.Prenom": "Křestní jméno",
+	"Block.Inscription.Prenom": "Jméno",
 	"Block.Inscription.DateNaiss": "Datum narození",
 	"Block.Inscription.DateFormat": "dd/mm/rrrr",
 	"Block.Inscription.Sexe": "Pohlaví",
@@ -140,8 +140,8 @@
 	"Block.Inscription.Inscrire.Comme": "Přihlásit se jako",
 	"Block.Inscription.Champs": "Vyplňte, prosíme, všechna červená políčka",
 	"date.from": "",
-	"date.to": "",
-	"Block.Inscription.Valider": "",
+	"date.to": "-",
+	"Block.Inscription.Valider": "Přihlásit se",
 	"Block.Actus.ReadMore": "",
 	"Block.Inscription.Fiche.Service": "Přihláška",
 	"Go.NFGWebsite": "",
@@ -168,6 +168,8 @@
 	"Découvrir la revue FOI": "",
 	"Block.Paiement.Acces": "",
 	"ccn": "",
-	"Time.de": "",
-	"couple_ephata": ""
+	"Time.de": "-",
+	"couple_ephata": "",
+	"Block.Inscription.PolitiqueRgpd": "s politikou ochrany soukromí komunity Chemin Neuf",
+	"Block.Inscription.Jaccepte": "Souhlasím"
 }
