--- a/theme/cte/localization/de/Texts.json
+++ b/theme/cte/localization/de/Texts.json
@@ -169,5 +169,7 @@
 	"Block.Paiement.Acces": "",
 	"ccn": "Gemeinschaft Chemin Neuf",
 	"Time.de": "von",
-	"couple_ephata": ""
+	"couple_ephata": "",
+	"Block.Inscription.PolitiqueRgpd": "die Datenschutzbestimmungen der Chemin Neuf Community",
+	"Block.Inscription.Jaccepte": "Ich akzeptiere"
 }
