--- a/theme/cte/localization/hu/Texts.json
+++ b/theme/cte/localization/hu/Texts.json
@@ -169,5 +169,7 @@
 	"Block.Paiement.Acces": "",
 	"ccn": "",
 	"Time.de": "",
-	"couple_ephata": ""
+	"couple_ephata": "",
+	"Block.Inscription.PolitiqueRgpd": "a Chemin Neuf közösség adatvédelmi politikáját",
+	"Block.Inscription.Jaccepte": "Elfogadom"
 }
