--- a/theme/cte/localization/it/Texts.json
+++ b/theme/cte/localization/it/Texts.json
@@ -169,5 +169,7 @@
 	"Block.Paiement.Acces": "",
 	"ccn": "",
 	"Time.de": "",
-	"couple_ephata": ""
+	"couple_ephata": "",
+	"Block.Inscription.PolitiqueRgpd": "l'informativa sulla privacy della comunità Chemin Neuf",
+	"Block.Inscription.Jaccepte": "Accetto"
 }
