--- a/theme/cte/localization/pt-BR/Texts.json
+++ b/theme/cte/localization/pt-BR/Texts.json
@@ -169,5 +169,7 @@
 	"Block.Paiement.Acces": "",
 	"ccn": "",
 	"Time.de": "",
-	"couple_ephata": ""
+	"couple_ephata": "",
+	"Block.Inscription.PolitiqueRgpd": "a política de privacidade da comunidade Chemin Neuf",
+	"Block.Inscription.Jaccepte": "Eu aceito"
 }
