--- a/theme/cte/localization/nl/Texts.json
+++ b/theme/cte/localization/nl/Texts.json
@@ -169,5 +169,7 @@
 	"Block.Paiement.Acces": "",
 	"ccn": "",
 	"Time.de": "",
-	"couple_ephata": ""
+	"couple_ephata": "",
+	"Block.Inscription.PolitiqueRgpd": "het privacybeleid van de Chemin Neuf-gemeenschap",
+	"Block.Inscription.Jaccepte": "Ik accepteer"
 }
