--- a/theme/cte/localization/pl/Texts.json
+++ b/theme/cte/localization/pl/Texts.json
@@ -169,5 +169,7 @@
 	"Block.Paiement.Acces": "",
 	"ccn": "",
 	"Time.de": "",
-	"couple_ephata": ""
+	"couple_ephata": "",
+	"Block.Inscription.PolitiqueRgpd": "politykę prywatności społeczności Chemin Neuf",
+	"Block.Inscription.Jaccepte": "Akceptuję"
 }
