fix translation DE for rgpd checkbox

--- a/theme/cte/localization/de/Texts.json
+++ b/theme/cte/localization/de/Texts.json
@@ -170,6 +170,6 @@
 	"ccn": "Gemeinschaft Chemin Neuf",
 	"Time.de": "von",
 	"couple_ephata": "",
-	"Block.Inscription.PolitiqueRgpd": "die Datenschutzbestimmungen der Chemin Neuf Community",
+	"Block.Inscription.PolitiqueRgpd": "die Datenschutzbestimmungen der Gemeinschaft Chemin Neuf",
 	"Block.Inscription.Jaccepte": "Ich akzeptiere"
 }
