--- a/theme/cluny/localization/de/Texts.json
+++ b/theme/cluny/localization/de/Texts.json
@@ -1,1 +1,170 @@
-{"Dons.Projet":"Art des Projektes","Dons.Finance":"Projekt zu %pourcentage%% finanziert","Dons.Soutien":"Ich unterstütze das Projekt","Dons.Recap":"Ich spende","Block.Dons.Donner":"Spenden","Block.Dons.Titre":"Meine Spende","Block.Dons.Condition":"Rahmenbedingung meiner Spende","Block.Dons.Montant":"Betrag meiner Spende","Block.Dons.Mensuel":"Monatliche Spende","Block.Dons.Mois":"pro Monat","Block.Dons.Trimestre":"quartalsweise","Block.Dons.Trimestriel":"Vierteljährige Spende","Block.Dons.Cout":"Ihre Spende kostet Sie nur","Block.Dons.Message":"Ich möchte zu meiner Spende eine Nachricht hinzufügen","Block.Dons.ContactNational":"Steuerlicher und administrativer Kontakt in Ihrem La","PresDeChezToi.Titre":"","PresDeChezToi.Propositions":"","PresDeChezToi.Recherche":"","PresDeChezToi.Tous.Lieux":"","PresDeChezToi.Tous.Prop":"","PresDeChezToi.Tous.Rencontres":"","Inscriptions":"Anmeldungen","Block.Inscription.Lui":"Er","Block.Inscription.Civilite.Monsieur":"Herr","Block.Inscription.Civilite.Madame":"Frau","Block.Inscription.Civilite.MonsieurOuMadame":"H","Block.Inscription.Civilite.Mademoiselle":"Fräulein","Block.Inscription.Civilite.Pere":"Pater","Block.Inscription.Civilite.Soeur":"Schwester","Block.Inscription.Civilite.Frere":"Bruder","Block.Inscription.Elle":"Sie","Block.Inscription.Enfants":"Kinder","Block.Inscription.Enfant":"Kind","Block.Inscription.Enfant.Supprimer":"","Block.Inscription.Enfant.Ajouter":"Kind hinzufügen","Block.Inscription.Enfant.Fille":"","Block.Inscription.Enfant.Garçon":"","Block.Inscription.Couple":"Das Paar","Block.Inscription.VoirPlan":"Siehe Plan","Block.Inscription.Statut.Libre":"\nOffen, ohne Anmeldung","Block.Inscription.Statut.Close":"Anmeldefrist abgelaufen","Block.Inscription.Statut.Ouvertes":"Anmeldung ab jetzt möglich","Block.Inscription.Statut.Preinscription":"Voranmeldungen","Block.Inscription.Statut.Non":"Keine Anmeldungen","Block.Inscription.Statut.Septembre":"Anmeldung ab Mitte September möglich","adolescent":"14-18 Jährige(r)","jeune-adulte":"18-30 Jährige(r)","couple":"Ehepaar","famille":"Familie","personne-avec-enfants":"Person mit Kind(ern)","fiances":"Verlobte","adulte":"Einzelperson","pretre":"Priest","Block.Inscription.Attente.Ligne1":"Die Veranstaltung ist leider ausgebucht.","Block.Inscription.Attente.Ligne2":"Sie können sich in die Warteliste eintragen.","Block.Inscription.Attente.Ligne3":"Eine Anmeldegebühr wird mit der Anmeldebestätigung erhoben.","Block.Inscription.Passee":"Veranstaltung vorbei","Block.Inscription.Fiche":"Anmeldeformular","Block.Inscription.InfosPerso":"Persönliche Daten","Block.Inscription.Societe":"Gesellschaft oder Organisation","Block.Inscription.Nom":"Name","Block.Inscription.Nom.Different":"Name (falls abweichend)","Block.Inscription.Prenom":"Vorname","Block.Inscription.DateNaiss":"Geburtsdatum","Block.Inscription.DateFormat":"tt\/mm\/jjjj","Block.Inscription.Sexe":"Geschlecht","Block.Inscription.Sexe.H":"M","Block.Inscription.Sexe.F":"F","Block.Inscription.Nationalite":"Nationalität","Block.Inscription.Adresse":"Adresse","Block.Inscription.CodePostal":"Postleitzahl","Block.Inscription.Ville":"Stadt","Block.Inscription.Pays":"Land","Block.Inscription.Classe":"Klasse\/Studium","Block.Inscription.Situation":"Situation","Block.Inscription.Situation.Etudiant":"Studierende(r)","Block.Inscription.Situation.JPro":"Junge(r) Berufstätige(r)","Block.Inscription.Situation.Autre":"Sonstiges","Block.Inscription.Profession":"Beruf","Block.Inscription.Contact":"Kontakt","Block.Inscription.Email":"Email","Block.Inscription.Email.Verification":"Email (Bestätigung)","Block.Inscription.Email.Error.Different":"","Block.Inscription.Email.Parent":"E-Mail eines Elternteils","Block.Inscription.Email.Parent.Verification":"E-Mail eines Elternteils (Bestätigung)","Block.Inscription.Telephone":"Telefonnummer","Block.Inscription.Telephone.Placeholder":"+xx\/x xx xx xx xx","Block.Inscription.Telephone.Fixe":"Festnetz","Block.Inscription.Telephone.Portable":"Handy","Block.Inscription.Telephone.Portable.Parents":"Mobil eines Elternteils","Block.Inscription.Telephone.Condition":"Eine der Telefonnummern ist erforderlich","Block.Inscription.Telephone.Condition.Ados":"Eine Telefonnummer (Festnetz oder Mobil) eines Elternteils ist notwendig.","Block.Inscription.Remarques":"Anmerkungen","Block.Inscription.Connu":"Ich habe von dieser Seite erfahren von","Block.Inscription.Connu.Internet":"Internet","Block.Inscription.Connu.Tracts":"Flyer","Block.Inscription.Connu.Famille":"Freunde\/Verwandte","Block.Inscription.SituationConjugale":"Familienstand:","Block.Inscription.SituationConjugale.Maries":"Verheiratet","Block.Inscription.SituationConjugale.Fiances":"Verlobt","Block.Inscription.SituationConjugale.Autre":"Sonstiges","Block.Inscription.SituationConjugale.Preciser":"Bitte angeben","Block.Inscription.Mariage":"Hochzeitsdatum:","Block.Inscription.Mariage.Fiances":"Hochzeitsdatum (falls bekannt):","Block.Inscription.Fiances":"Hochzeit geplant","Block.Inscription.Inscrire.Service":"Im Dienst sein","Block.Inscription.Paf":"Teilnehmerbeitrag :","Block.Inscription.Paf.Problemes":"Geld soll kein Hinderungsgrund sein","Block.Inscription.Paf.Montant":"","Block.Inscription.Paf.Maintenant":"","Block.Inscription.Paf.Maintenant.Rien":"","Block.Inscription.Paf.Maintenant.Totalite":"","Block.Inscription.Paf.Maintenant.Partie":"","Block.Inscription.Paf.ModePaiment":"","Block.Inscription.Paf.carte":"per Kart","Block.Inscription.Paf.cheque":"per Scheck","Block.Inscription.Paf.virement":"per Überweisung","Block.Inscription.Paf.Virement.Period":"per Dauerauftra","Block.Inscription.Paf.Prelevement":"per automatischen Bankeinzug","Block.Inscription.Paf.Liquide":"","Block.Inscription.Entretien":"Zur Bestätigung der Anmeldung ist ein Gespräch nötig.","Block.Inscription.Motivation":"Damit Ihre Anmeldung vollständig ist, senden Sie bitte einen Brief mit Erklärung Ihrer Beweggründe an das Sekretariat.","Block.Inscription.Formulaire_":"Damit Ihre Anmeldung vollständig ist, drucken Sie bitte folgendes Zusatz-Formular aus, füllen Sie es handschriftlich aus und senden Sie es an das Sekretariat (Adresse siehe oben).","Block.Inscription.FormulaireEtMotiv":"Damit Ihre Anmeldung vollständig ist, schreiben Sie bitte einen Brief mit Angabe Ihrer Beweggründe. Drucken Sie bitte auch folgendes Zusatz-Formular aus, füllen Sie es handschriftlich aus und senden Sie beide Dokumente an das Sekretariat (Adresse siehe oben).","Block.Inscription.Succes":"Ihre Anmeldung wurde erfasst.","Block.Inscription.PaimentComplementaire":"","Block.Inscription.PaimentComplementaire.Intro":"","Block.Inscription.PaimentComplementaire.Email":"","Block.Inscription.PaimentComplementaire.Email.Aucun":"","Block.Inscription.PaimentComplementaire.Email.Autre":"","Block.Inscription.Numero":"","Block.PaimentComplementaire.MontantPaye":"","Block.PaimentComplementaire.MontantAPayer":"","Block.PaimentComplementaire.Paf":"","Block.Paiment":"Zahlung","Calendrier":"Kalender","Date":"Datum","Proposition":"Veranstaltung","Block.Inscription.Inscrire.Comme":"Sich anmelden als","Block.Inscription.Champs":"Bitte alle Pflichtfelder ausfüllen","date.from":" ","date.to":"- ","Block.Inscription.Valider":"Anmelden","Block.Actus.ReadMore":"","Block.Inscription.Fiche.Service":"Anmeldeformular","Go.NFGWebsite":"","Block.Calendar.Passee":"","Block.Inscription.Formulaire.Complement":"","Block.Dons.Fini":"Projekt finanziert","Block.Dons.Website":"","Block.Inscription.Civilite":"Anrede","Block.Inscription.Paf.paypal":"Per PayPal","Block.Dons.Search.More":"Mehr anzeigen","Block.Dons.Search.Less":"Weniger anzeigen","Block.Calendar.Place":"Ort","Block.Inscription.Paiment":"","Block.Dons.Success":"","Block.Inscription.Formulaire":"Um Ihre Anfrage fortzusetzen, bitten wir Sie, das folgende Dokument auszufüllen","Merci de nous retourner ce document, soit par mail (sessions@chemin-neuf.org), soit par la Poste ...":"Vielen Dank für die Rücksendung dieses Dokuments, entweder per Post (%mail_inscription%) oder durch die Post (%adresse_postale_inscription%).","Demande_De_Reservation":"Buchungsanfrage","Arrivee":"Ankunft","Depart":"Abfahrt","Groupe_Adultes_Nombre":"Für eine Gruppe von Erwachsenen (Nummer vorgesehen)","Groupe_Jeunes_Nombre":"Für eine Gruppe von Jugendlichen (Anzahl vorgesehen)","Individuel_Nombre":"Einzeln kommen","Objet_Demande":"Geben Sie in wenigen Worten den Zweck Ihrer Bewerbung an"} 
+{
+    "Dons.Projet": "Art des Projektes",
+    "Dons.Finance": "Projekt zu %pourcentage%% finanziert",
+    "Dons.Soutien": "Ich unterstütze das Projekt",
+    "Dons.Recap": "Ich spende",
+    "Block.Dons.Donner": "Spenden",
+    "Block.Dons.Titre": "Meine Spende",
+    "Block.Dons.Condition": "Rahmenbedingung meiner Spende",
+    "Block.Dons.Montant": "Betrag meiner Spende",
+    "Block.Dons.Mensuel": "Monatliche Spende",
+    "Block.Dons.Mois": "pro Monat",
+    "Block.Dons.Trimestre": "quartalsweise",
+    "Block.Dons.Trimestriel": "Vierteljährige Spende",
+    "Block.Dons.Cout": "Ihre Spende kostet Sie nur",
+    "Block.Dons.Message": "Ich möchte zu meiner Spende eine Nachricht hinzufügen",
+    "Block.Dons.ContactNational": "Steuerlicher und administrativer Kontakt in Ihrem La",
+    "PresDeChezToi.Titre": "",
+    "PresDeChezToi.Propositions": "",
+    "PresDeChezToi.Recherche": "",
+    "PresDeChezToi.Tous.Lieux": "",
+    "PresDeChezToi.Tous.Prop": "",
+    "PresDeChezToi.Tous.Rencontres": "",
+    "Inscriptions": "Anmeldungen",
+    "Block.Inscription.Lui": "Er",
+    "Block.Inscription.Civilite.Monsieur": "Herr",
+    "Block.Inscription.Civilite.Madame": "Frau",
+    "Block.Inscription.Civilite.MonsieurOuMadame": "H",
+    "Block.Inscription.Civilite.Mademoiselle": "Fräulein",
+    "Block.Inscription.Civilite.Pere": "Pater",
+    "Block.Inscription.Civilite.Soeur": "Schwester",
+    "Block.Inscription.Civilite.Frere": "Bruder",
+    "Block.Inscription.Elle": "Sie",
+    "Block.Inscription.Enfants": "Kinder",
+    "Block.Inscription.Enfant": "Kind",
+    "Block.Inscription.Enfant.Supprimer": "",
+    "Block.Inscription.Enfant.Ajouter": "Kind hinzufügen",
+    "Block.Inscription.Enfant.Fille": "",
+    "Block.Inscription.Enfant.Garçon": "",
+    "Block.Inscription.Couple": "Das Paar",
+    "Block.Inscription.VoirPlan": "Siehe Plan",
+    "Block.Inscription.Statut.Libre": "\nOffen, ohne Anmeldung",
+    "Block.Inscription.Statut.Close": "Anmeldefrist abgelaufen",
+    "Block.Inscription.Statut.Ouvertes": "Anmeldung ab jetzt möglich",
+    "Block.Inscription.Statut.Preinscription": "Voranmeldungen",
+    "Block.Inscription.Statut.Non": "Keine Anmeldungen",
+    "Block.Inscription.Statut.Septembre": "Anmeldung ab Mitte September möglich",
+    "adolescent": "14-18 Jährige(r)",
+    "jeune-adulte": "18-30 Jährige(r)",
+    "couple": "Ehepaar",
+    "famille": "Familie",
+    "personne-avec-enfants": "Person mit Kind(ern)",
+    "fiances": "Verlobte",
+    "adulte": "Einzelperson",
+    "pretre": "Priest",
+    "Block.Inscription.Attente.Ligne1": "Die Veranstaltung ist leider ausgebucht.",
+    "Block.Inscription.Attente.Ligne2": "Sie können sich in die Warteliste eintragen.",
+    "Block.Inscription.Attente.Ligne3": "Eine Anmeldegebühr wird mit der Anmeldebestätigung erhoben.",
+    "Block.Inscription.Passee": "Veranstaltung vorbei",
+    "Block.Inscription.Fiche": "Anmeldeformular",
+    "Block.Inscription.InfosPerso": "Persönliche Daten",
+    "Block.Inscription.Societe": "Gesellschaft oder Organisation",
+    "Block.Inscription.Nom": "Name",
+    "Block.Inscription.Nom.Different": "Name (falls abweichend)",
+    "Block.Inscription.Prenom": "Vorname",
+    "Block.Inscription.DateNaiss": "Geburtsdatum",
+    "Block.Inscription.DateFormat": "tt\/mm\/jjjj",
+    "Block.Inscription.Sexe": "Geschlecht",
+    "Block.Inscription.Sexe.H": "M",
+    "Block.Inscription.Sexe.F": "F",
+    "Block.Inscription.Nationalite": "Nationalität",
+    "Block.Inscription.Adresse": "Adresse",
+    "Block.Inscription.CodePostal": "Postleitzahl",
+    "Block.Inscription.Ville": "Stadt",
+    "Block.Inscription.Pays": "Land",
+    "Block.Inscription.Classe": "Klasse\/Studium",
+    "Block.Inscription.Situation": "Situation",
+    "Block.Inscription.Situation.Etudiant": "Studierende(r)",
+    "Block.Inscription.Situation.JPro": "Junge(r) Berufstätige(r)",
+    "Block.Inscription.Situation.Autre": "Sonstiges",
+    "Block.Inscription.Profession": "Beruf",
+    "Block.Inscription.Contact": "Kontakt",
+    "Block.Inscription.Email": "Email",
+    "Block.Inscription.Email.Verification": "Email (Bestätigung)",
+    "Block.Inscription.Email.Error.Different": "",
+    "Block.Inscription.Email.Parent": "E-Mail eines Elternteils",
+    "Block.Inscription.Email.Parent.Verification": "E-Mail eines Elternteils (Bestätigung)",
+    "Block.Inscription.Telephone": "Telefonnummer",
+    "Block.Inscription.Telephone.Placeholder": "+xx\/x xx xx xx xx",
+    "Block.Inscription.Telephone.Fixe": "Festnetz",
+    "Block.Inscription.Telephone.Portable": "Handy",
+    "Block.Inscription.Telephone.Portable.Parents": "Mobil eines Elternteils",
+    "Block.Inscription.Telephone.Condition": "Eine der Telefonnummern ist erforderlich",
+    "Block.Inscription.Telephone.Condition.Ados": "Eine Telefonnummer (Festnetz oder Mobil) eines Elternteils ist notwendig.",
+    "Block.Inscription.Remarques": "Anmerkungen",
+    "Block.Inscription.Connu": "Ich habe von dieser Seite erfahren von",
+    "Block.Inscription.Connu.Internet": "Internet",
+    "Block.Inscription.Connu.Tracts": "Flyer",
+    "Block.Inscription.Connu.Famille": "Freunde\/Verwandte",
+    "Block.Inscription.SituationConjugale": "Familienstand:",
+    "Block.Inscription.SituationConjugale.Maries": "Verheiratet",
+    "Block.Inscription.SituationConjugale.Fiances": "Verlobt",
+    "Block.Inscription.SituationConjugale.Autre": "Sonstiges",
+    "Block.Inscription.SituationConjugale.Preciser": "Bitte angeben",
+    "Block.Inscription.Mariage": "Hochzeitsdatum:",
+    "Block.Inscription.Mariage.Fiances": "Hochzeitsdatum (falls bekannt):",
+    "Block.Inscription.Fiances": "Hochzeit geplant",
+    "Block.Inscription.Inscrire.Service": "Im Dienst sein",
+    "Block.Inscription.Paf": "Teilnehmerbeitrag :",
+    "Block.Inscription.Paf.Problemes": "Geld soll kein Hinderungsgrund sein",
+    "Block.Inscription.Paf.Montant": "",
+    "Block.Inscription.Paf.Maintenant": "",
+    "Block.Inscription.Paf.Maintenant.Rien": "",
+    "Block.Inscription.Paf.Maintenant.Totalite": "",
+    "Block.Inscription.Paf.Maintenant.Partie": "",
+    "Block.Inscription.Paf.ModePaiment": "",
+    "Block.Inscription.Paf.carte": "per Kart",
+    "Block.Inscription.Paf.cheque": "per Scheck",
+    "Block.Inscription.Paf.virement": "per Überweisung",
+    "Block.Inscription.Paf.Virement.Period": "per Dauerauftra",
+    "Block.Inscription.Paf.Prelevement": "per automatischen Bankeinzug",
+    "Block.Inscription.Paf.Liquide": "",
+    "Block.Inscription.Entretien": "Zur Bestätigung der Anmeldung ist ein Gespräch nötig.",
+    "Block.Inscription.Motivation": "Damit Ihre Anmeldung vollständig ist, senden Sie bitte einen Brief mit Erklärung Ihrer Beweggründe an das Sekretariat.",
+    "Block.Inscription.Formulaire_": "Damit Ihre Anmeldung vollständig ist, drucken Sie bitte folgendes Zusatz-Formular aus, füllen Sie es handschriftlich aus und senden Sie es an das Sekretariat (Adresse siehe oben).",
+    "Block.Inscription.FormulaireEtMotiv": "Damit Ihre Anmeldung vollständig ist, schreiben Sie bitte einen Brief mit Angabe Ihrer Beweggründe. Drucken Sie bitte auch folgendes Zusatz-Formular aus, füllen Sie es handschriftlich aus und senden Sie beide Dokumente an das Sekretariat (Adresse siehe oben).",
+    "Block.Inscription.Succes": "Ihre Anmeldung wurde erfasst.",
+    "Block.Inscription.PaimentComplementaire": "",
+    "Block.Inscription.PaimentComplementaire.Intro": "",
+    "Block.Inscription.PaimentComplementaire.Email": "",
+    "Block.Inscription.PaimentComplementaire.Email.Aucun": "",
+    "Block.Inscription.PaimentComplementaire.Email.Autre": "",
+    "Block.Inscription.Numero": "",
+    "Block.PaimentComplementaire.MontantPaye": "",
+    "Block.PaimentComplementaire.MontantAPayer": "",
+    "Block.PaimentComplementaire.Paf": "",
+    "Block.Paiment": "Zahlung",
+    "Calendrier": "Kalender",
+    "Date": "Datum",
+    "Proposition": "Veranstaltung",
+    "Block.Inscription.Inscrire.Comme": "Sich anmelden als",
+    "Block.Inscription.Champs": "Bitte alle Pflichtfelder ausfüllen",
+    "date.from": " ",
+    "date.to": "- ",
+    "Block.Inscription.Valider": "Anmelden",
+    "Block.Actus.ReadMore": "",
+    "Block.Inscription.Fiche.Service": "Anmeldeformular",
+    "Go.NFGWebsite": "",
+    "Block.Calendar.Passee": "",
+    "Block.Inscription.Formulaire.Complement": "",
+    "Block.Dons.Fini": "Projekt finanziert",
+    "Block.Dons.Website": "",
+    "Block.Inscription.Civilite": "Anrede",
+    "Block.Inscription.Paf.paypal": "Per PayPal",
+    "Block.Dons.Search.More": "Mehr anzeigen",
+    "Block.Dons.Search.Less": "Weniger anzeigen",
+    "Block.Calendar.Place": "Ort",
+    "Block.Inscription.Paiment": "",
+    "Block.Dons.Success": "",
+    "Block.Inscription.Formulaire": "Um Ihre Anfrage fortzusetzen, bitten wir Sie, das folgende Dokument auszufüllen",
+    "Merci de nous retourner ce document, soit par mail (sessions@chemin-neuf.org), soit par la Poste ...": "Vielen Dank für die Rücksendung dieses Dokuments, entweder per Post (%mail_inscription%) oder durch die Post (%adresse_postale_inscription%).",
+    "Demande_De_Reservation": "Buchungsanfrage",
+    "Arrivee": "Ankunft",
+    "Depart": "Abfahrt",
+    "Groupe_Adultes_Nombre": "Für eine Gruppe von Erwachsenen (Nummer vorgesehen)",
+    "Groupe_Jeunes_Nombre": "Für eine Gruppe von Jugendlichen (Anzahl vorgesehen)",
+    "Individuel_Nombre": "Einzeln kommen",
+    "Objet_Demande": "Geben Sie in wenigen Worten den Zweck Ihrer Bewerbung an",
+    "Block.Inscription.PolitiqueRgpd": "die Datenschutzbestimmungen der Gemeinschaft Chemin Neuf",
+	"Block.Inscription.Jaccepte": "Ich akzeptiere"
+}
