--- a/theme/cte/localization/nl/Texts.json
+++ b/theme/cte/localization/nl/Texts.json
@@ -114,7 +114,8 @@
 	"Block.Inscription.Paf.Maintenant.Partie": "Een deel van de kosten",
 	"Block.Inscription.Paf.ModePaiment": "Wijze van betaling",
 	"Block.Inscription.Paf.carte": "met een bankkaart",
-	"Block.Inscription.Paf.cheque": "par chèque",
+	"Block.Inscription.Paf.cheque": "per cheque",
+	"Block.Inscription.Paf.cheque_vac": "vakantiecheque",
 	"Block.Inscription.Paf.virement": "met een overschrijving",
 	"Block.Inscription.Paf.Virement.Period": "met automatische overschrijving",
 	"Block.Inscription.Paf.Prelevement": "met domiciliëring",
