--- a/theme/cte/localization/pt-BR/Texts.json
+++ b/theme/cte/localization/pt-BR/Texts.json
@@ -113,8 +113,9 @@
 	"Block.Inscription.Paf.Maintenant.Totalite": "",
 	"Block.Inscription.Paf.Maintenant.Partie": "",
 	"Block.Inscription.Paf.ModePaiment": "",
-	"Block.Inscription.Paf.carte": "",
-	"Block.Inscription.Paf.cheque": "",
+	"Block.Inscription.Paf.carte": "cartão de crédito",
+	"Block.Inscription.Paf.cheque": "cheque",
+	"Block.Inscription.Paf.cheque_vac": "cheque de férias",
 	"Block.Inscription.Paf.virement": "",
 	"Block.Inscription.Paf.Virement.Period": "",
 	"Block.Inscription.Paf.Prelevement": "",
