--- a/theme/cte/localization/cs/Texts.json
+++ b/theme/cte/localization/cs/Texts.json
@@ -115,6 +115,7 @@
 	"Block.Inscription.Paf.ModePaiment": "Způsob platby",
 	"Block.Inscription.Paf.carte": "kartou",
 	"Block.Inscription.Paf.cheque": "šekem",
+	"Block.Inscription.Paf.cheque_vac": "šekem na dovolenou",
 	"Block.Inscription.Paf.virement": "převodem",
 	"Block.Inscription.Paf.Virement.Period": "pravidelným převodem",
 	"Block.Inscription.Paf.Prelevement": "trvalým příkazem",
