--- a/theme/cte/localization/hu/Texts.json
+++ b/theme/cte/localization/hu/Texts.json
@@ -115,6 +115,7 @@
 	"Block.Inscription.Paf.ModePaiment": "",
 	"Block.Inscription.Paf.carte": "kártyás fizetés",
 	"Block.Inscription.Paf.cheque": "csekkes fizetés",
+	"Block.Inscription.Paf.cheque_vac": "csekkes fizetek",
 	"Block.Inscription.Paf.virement": "átutalás",
 	"Block.Inscription.Paf.Virement.Period": "rendszeres átutalás",
 	"Block.Inscription.Paf.Prelevement": "állandó beszedési megbízás",
