add fiances binome est-ce bien lui, elle

--- a/theme/cte/localization/cs/Texts.json
+++ b/theme/cte/localization/cs/Texts.json
@@ -50,6 +50,7 @@
 	"famille": "Rodina",
 	"personne-avec-enfants": "Osoba s dítětem",
 	"fiances": "Snoubenci",
+	"fiances_binome": "Snoubenci / Binome",
 	"adulte": "Jednotlivec",
 	"pretre": "",
 	"Block.Inscription.Attente.Ligne1": "Vybraný návrh je kompletní",
