--- a/theme/cte/localization/de/Texts.json
+++ b/theme/cte/localization/de/Texts.json
@@ -50,6 +50,7 @@
 	"famille": "Familie",
 	"personne-avec-enfants": "Person mit Kind(ern)",
 	"fiances": "Verlobte",
+	"fiances_binome": "Verlobte / Binome",
 	"adulte": "Einzelperson",
 	"pretre": "Priest",
 	"Block.Inscription.Attente.Ligne1": "Die Veranstaltung ist leider ausgebucht.",
