--- a/theme/cte/localization/en/Texts.json
+++ b/theme/cte/localization/en/Texts.json
@@ -50,6 +50,7 @@
 	"famille": "Family",
 	"personne-avec-enfants": "Person with children",
 	"fiances": "Engaged",
+	"fiances_binome": "Engaged / Binome",
 	"adulte": "Individual",
 	"pretre": "Priest",
 	"Block.Inscription.Attente.Ligne1": "The session that you have chosen is complete.",
