--- a/theme/cte/localization/fr/Texts.json
+++ b/theme/cte/localization/fr/Texts.json
@@ -50,6 +50,7 @@
 	"famille": "Famille",
 	"personne-avec-enfants": "Personne avec enfants",
 	"fiances": "Fiancés",
+	"fiances_binome": "Fiancés / Binôme \"Est-ce bien Lui ? Est-ce bien Elle ?\"",
 	"adulte": "Individuel",
 	"pretre": "Prêtre",
 	"Block.Inscription.Attente.Ligne1": "La proposition choisie est complète.",
