--- a/theme/cte/localization/hu/Texts.json
+++ b/theme/cte/localization/hu/Texts.json
@@ -50,6 +50,7 @@
 	"famille": "Család",
 	"personne-avec-enfants": "Személy gyerekekkel",
 	"fiances": "Jegyespárok",
+	"fiances_binome": "Jegyespárok / Binome",
 	"adulte": "Egyéni",
 	"pretre": "Pap",
 	"Block.Inscription.Attente.Ligne1": "A választott program betelt.",
