--- a/theme/cte/localization/it/Texts.json
+++ b/theme/cte/localization/it/Texts.json
@@ -50,6 +50,7 @@
 	"famille": "Famiglia\n",
 	"personne-avec-enfants": "Persona con figli",
 	"fiances": "Fidanzati",
+	"fiances_binome": "Fidanzati / Coppia \"È proprio Lui ? È proprio Lei ?\"",
 	"adulte": "Singolo",
 	"pretre": "Sacerdote",
 	"Block.Inscription.Attente.Ligne1": "La proposta scelta è esaurita",
