--- a/theme/cte/localization/nl/Texts.json
+++ b/theme/cte/localization/nl/Texts.json
@@ -50,6 +50,7 @@
 	"famille": "Familie",
 	"personne-avec-enfants": "Personen met kinderen",
 	"fiances": "Verloofden",
+	"fiances_binome": "Verloofden / Binome",
 	"adulte": "Individueel",
 	"pretre": "",
 	"Block.Inscription.Attente.Ligne1": "De gekozen activiteit is volgeboekt.",
