--- a/theme/cte/localization/pl/Texts.json
+++ b/theme/cte/localization/pl/Texts.json
@@ -50,6 +50,7 @@
 	"famille": "Rodzina",
 	"personne-avec-enfants": "Osoba z dzieckiem",
 	"fiances": "Narzeczeni",
+	"fiances_binome": "Narzeczeni / Binome",
 	"adulte": "Osoba indywidualna",
 	"pretre": "Ksiądz",
 	"Block.Inscription.Attente.Ligne1": "Na to wydarzenie nie ma już wolnych miejsc.",
