--- a/theme/cte/localization/pt-BR/Texts.json
+++ b/theme/cte/localization/pt-BR/Texts.json
@@ -50,6 +50,7 @@
 	"famille": "Família",
 	"personne-avec-enfants": "Pessoa com crianças",
 	"fiances": "Noivos",
+	"fiances_binome": "Noivos / Binome",
 	"adulte": "Individual",
 	"pretre": "",
 	"Block.Inscription.Attente.Ligne1": "A proposta selecionada está completa.",
