--- a/theme/cte/localization/es/Texts.json
+++ b/theme/cte/localization/es/Texts.json
@@ -50,6 +50,7 @@
 	"famille": "Familia",
 	"personne-avec-enfants": "Persona con niños",
 	"fiances": "Novios",
+	"fiances_binome": "Novios / Binome",
 	"adulte": "Individual",
 	"pretre": "",
 	"Block.Inscription.Attente.Ligne1": "La propuesta elegida esta complèta.",
